05.chirpstack_consumer/kubernetes/01.create__Namespace.yaml

---

apiVersion: v1
kind: Namespace
metadata:
  name: chirpstack-consumer
  labels:
    app.kubernetes.io/part-of: chirpstack-consumer
