05.chirpstack_consumer/kubernetes/03.chirpstack-consumer__Backend_Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: api-chirpstack-consumer-backend-svc
  namespace: chirpstack-consumer
  labels:
    app: api-chirpstack-consumer-backend
    app.kubernetes.io/part-of: chirpstack-consumer
spec:
  selector:
    app: api-chirpstack-consumer-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
