05.chirpstack_consumer/kubernetes/05.chirpstack-consumer__Frontend_Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: app-chirpstack-consumer-frontend-svc
  namespace: chirpstack-consumer
  labels:
    app: app-chirpstack-consumer-frontend
    app.kubernetes.io/part-of: chirpstack-consumer
spec:
  selector:
    app: app-chirpstack-consumer-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
